security hole fixes and local deployment

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,6 +8,8 @@ dist/
 vagrant/
 logs/
 Dockerfile
+docker-compose.yml
+nginx.conf
 .npmrc
 
 # Pattern is *not covered* by node_modules/ above no matter what IntelliJ says!
